<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryLight"
    tools:context="com.example.christina.creditrewards.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="300dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/generic"
                android:layout_gravity="center_horizontal"
                android:id="@+id/cardImage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:id="@+id/cardName"
                android:ellipsize="none"
                android:scrollHorizontally="false"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/rewardsLabel"
                        android:text="@string/rewardsL"
                        android:textColor="@color/textLabel"
                        android:gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:paddingStart="5dp"
                        android:paddingRight="5dp"
                        android:paddingEnd="5dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:width="0dp"
                        android:layout_weight="1"
                        android:ellipsize="none"
                        android:scrollHorizontally="false"
                        android:id="@+id/rewardsDisplay"
                        android:paddingLeft="10dp"
                        android:paddingStart="10dp"
                        android:paddingRight="5dp"
                        android:paddingEnd="5dp"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/bonusLabel"
                        android:text="@string/bonusL"
                        android:textColor="@color/textLabel"
                        android:gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:paddingStart="5dp"
                        android:paddingRight="5dp"
                        android:paddingEnd="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="0dp"
                        android:layout_weight="1"
                        android:ellipsize="none"
                        android:scrollHorizontally="false"
                        android:id="@+id/bonusDisplay"
                        android:paddingLeft="10dp"
                        android:paddingStart="10dp"
                        android:paddingRight="5dp"
                        android:paddingEnd="5dp"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/afLabel"
                        android:text="@string/afL"
                        android:textColor="@color/textLabel"
                        android:gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:paddingStart="5dp"
                        android:paddingRight="5dp"
                        android:paddingEnd="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="0dp"
                        android:layout_weight="1"
                        android:ellipsize="none"
                        android:scrollHorizontally="false"
                        android:id="@+id/afDisplay"
                        android:paddingLeft="10dp"
                        android:paddingStart="10dp"
                        android:paddingRight="5dp"
                        android:paddingEnd="5dp"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/aprLabel"
                        android:text="@string/aprL"
                        android:textColor="@color/textLabel"
                        android:gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:paddingStart="5dp"
                        android:paddingRight="5dp"
                        android:paddingEnd="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="0dp"
                        android:layout_weight="1"
                        android:ellipsize="none"
                        android:scrollHorizontally="false"
                        android:id="@+id/aprDisplay"
                        android:paddingLeft="10dp"
                        android:paddingStart="10dp"
                        android:paddingRight="5dp"
                        android:paddingEnd="5dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/btfeeLabel"
                        android:text="@string/btfeeL"
                        android:textColor="@color/textLabel"
                        android:gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:paddingStart="5dp"
                        android:paddingRight="5dp"
                        android:paddingEnd="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="0dp"
                        android:layout_weight="1"
                        android:ellipsize="none"
                        android:scrollHorizontally="false"
                        android:id="@+id/btfeeDisplay"
                        android:paddingLeft="10dp"
                        android:paddingStart="10dp"
                        android:paddingRight="5dp"
                        android:paddingEnd="5dp"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/forexLabel"
                        android:text="@string/forexL"
                        android:textColor="@color/textLabel"
                        android:gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:paddingStart="5dp"
                        android:paddingRight="5dp"
                        android:paddingEnd="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="0dp"
                        android:layout_weight="1"
                        android:ellipsize="none"
                        android:scrollHorizontally="false"
                        android:id="@+id/forexDisplay"
                        android:paddingLeft="10dp"
                        android:paddingStart="10dp"
                        android:paddingRight="5dp"
                        android:paddingEnd="5dp"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
